--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 
 {
   "name": "react-native-check-accessibility",
-  "version": "1.1.4",
+  "version": "1.1.6",
   "description": "",
   "main": "index.js",
+  "homepage": "https://github.com/firatsezel/react-native-check-accessibility#readme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
